# api-docs/openapi/v3_0/issuesApi.json
@@ -5,7 +5,7 @@
     "version" : "2.20.18"
   },
   "servers" : [ {
-    "url" : "http://localhost:60611",
+    "url" : "http://localhost:31857",
     "description" : "Generated server url"
   } ],
   "security" : [ {
@@ -261,6 +261,92 @@
       }
     },
     "/apis/console.api.issueComment.webjing.com/v1alpha1/issuecomments" : {
+      "get" : {
+        "description" : "List current issues comment.",
+        "operationId" : "ListIssuesComment",
+        "parameters" : [ {
+          "description" : "Page number. Default is 0.",
+          "in" : "query",
+          "name" : "page",
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }, {
+          "description" : "Size number. Default is 0.",
+          "in" : "query",
+          "name" : "size",
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          }
+        }, {
+          "description" : "Label selector. e.g.: hidden!=true",
+          "in" : "query",
+          "name" : "labelSelector",
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        }, {
+          "description" : "Field selector. e.g.: metadata.name==halo",
+          "in" : "query",
+          "name" : "fieldSelector",
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        }, {
+          "description" : "Sorting criteria in the format: property,(asc|desc). Default sort order is ascending. Multiple sort criteria are supported.",
+          "in" : "query",
+          "name" : "sort",
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "type" : "string"
+            }
+          }
+        }, {
+          "description" : "IssueComment owner.",
+          "in" : "query",
+          "name" : "owner",
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "description" : "IssueComment approved.",
+          "in" : "query",
+          "name" : "approved",
+          "schema" : {
+            "type" : "boolean"
+          }
+        }, {
+          "description" : "issue name.",
+          "in" : "query",
+          "name" : "issueName",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "default" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ListedIssueCommentList"
+                }
+              }
+            },
+            "description" : "default response"
+          }
+        },
+        "tags" : [ "console.api.issueComment.webjing.com/v1alpha1/Issue" ]
+      },
       "post" : {
         "description" : "Create a IssueComment.",
         "operationId" : "CreateIssueComment",
@@ -268,7 +354,7 @@
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/Issue"
+                "$ref" : "#/components/schemas/IssueComment"
               }
             }
           },
@@ -279,7 +365,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/Issue"
+                  "$ref" : "#/components/schemas/IssueComment"
                 }
               }
             },
@@ -1720,61 +1806,24 @@
             }
           }
         }, {
-          "description" : "IssueMessages filtered by keyword.",
+          "description" : "IssueComment owner.",
           "in" : "query",
-          "name" : "keyword",
+          "name" : "owner",
           "schema" : {
             "type" : "string"
           }
         }, {
-          "description" : "the subject of issue",
-          "in" : "query",
-          "name" : "subjectName",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "Owner name.",
-          "in" : "query",
-          "name" : "ownerName",
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "IssueMessages label.",
-          "in" : "query",
-          "name" : "label",
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "description" : "IssueMessages start date.",
-          "in" : "query",
-          "name" : "startDate",
-          "schema" : {
-            "type" : "string",
-            "format" : "date-time"
-          }
-        }, {
-          "description" : "IssueMessages end date.",
-          "in" : "query",
-          "name" : "endDate",
-          "schema" : {
-            "type" : "string",
-            "format" : "date-time"
-          }
-        }, {
-          "description" : "IssueMessages approved.",
+          "description" : "IssueComment approved.",
           "in" : "query",
           "name" : "approved",
           "schema" : {
             "type" : "boolean"
           }
         }, {
-          "description" : "IssueMessages’s issueTemplate.",
+          "description" : "issue name.",
           "in" : "query",
-          "name" : "issueTemplate",
+          "name" : "issueName",
+          "required" : true,
           "schema" : {
             "type" : "string"
           }
@@ -1800,7 +1849,7 @@
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/Issue"
+                "$ref" : "#/components/schemas/IssueComment"
               }
             }
           },
@@ -1838,32 +1887,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/Issue"
-                }
-              }
-            },
-            "description" : "default response"
-          }
-        },
-        "tags" : [ "uc.api.issueComment.webjing.com/v1alpha1/IssueComment" ]
-      },
-      "get" : {
-        "description" : "Get a My Issue Comment.",
-        "operationId" : "GetMyIssueComment",
-        "parameters" : [ {
-          "in" : "path",
-          "name" : "name",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "default" : {
-            "content" : {
-              "*/*" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/Issue"
+                  "$ref" : "#/components/schemas/IssueComment"
                 }
               }
             },
@@ -1887,7 +1911,7 @@
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/Issue"
+                "$ref" : "#/components/schemas/IssueComment"
               }
             }
           },
@@ -1898,7 +1922,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/Issue"
+                  "$ref" : "#/components/schemas/IssueComment"
                 }
               }
             },
