# packages/issue-static/src/api/issueComment.ts
@@ -1,0 +1,14 @@
+import { IssueComment } from "../types";
+import { axiosInstance } from "@halo-dev/api-client";
+
+const apiVersion = "/apis/uc.api.issueComment.webjing.com/v1alpha1";
+
+export function createIssueComment(issueComment:IssueComment) {
+    const urlPath = `${apiVersion}/issuecomments`;
+    return axiosInstance.post(urlPath, issueComment)
+}
+
+export function updateMyIssueComment(issueComment:IssueComment) {
+    const urlPath = `${apiVersion}/issuecomments/${issueComment.metadata.name}`;
+    return axiosInstance.put(urlPath, issueComment)
+}
