# packages/issue-static/src/types/issueComment/issue-comment.ts
@@ -1,0 +1,54 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Halo
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 2.20.18
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+// May contain unused imports in some cases
+// @ts-ignore
+import type { IssueCommentSpec } from './issue-comment-spec';
+// May contain unused imports in some cases
+// @ts-ignore
+import type { Metadata } from '../metadata';
+
+/**
+ * 
+ * @export
+ * @interface IssueComment
+ */
+export interface IssueComment {
+    /**
+     * 
+     * @type {string}
+     * @memberof IssueComment
+     */
+    'apiVersion': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof IssueComment
+     */
+    'kind': string;
+    /**
+     * 
+     * @type {Metadata}
+     * @memberof IssueComment
+     */
+    'metadata': Metadata;
+    /**
+     * 
+     * @type {IssueCommentSpec}
+     * @memberof IssueComment
+     */
+    'spec': IssueCommentSpec;
+}
+
